Forked wrong repo, migrated all exercies from 'reu-cfg' repo

--- a/exercises/connected_graph.ipynb
+++ b/exercises/connected_graph.ipynb
@@ -101,13 +101,36 @@
     "###\n",
     "### Write the code for the def connected\n",
     "###\n",
-    "    \n",
+    "\n",
+    "# Done\n",
     "def connected(g,verbose=False):\n",
+    "    \n",
     "    # g is a Graph\n",
     "    marked = {}\n",
-    "    \n",
+    "    first = True\n",
+    "\n",
+    "    # record all vertices\n",
+    "    for vertex in g.vertices():\n",
+    "        if(first):\n",
+    "            marked[vertex] = True # assign initial vertex\n",
+    "            first = False\n",
+    "        else:\n",
+    "            marked[vertex] = False\n",
+    "        \n",
+    "    # iteratively traverse until no more unmarked left\n",
+    "    changing = True\n",
+    "    while(changing):\n",
+    "        changing = False\n",
+    "        for edge in g.edges():\n",
+    "            # check one or other marked but not both\n",
+    "            if(marked[edge[0]] and not marked[edge[1]]): \n",
+    "                marked[edge[1]] = True\n",
+    "                changing = True\n",
+    "            elif(not marked[edge[0]] and marked[edge[1]]):\n",
+    "                marked[edge[0]] = True\n",
+    "                changing = True\n",
+    "\n",
     "    # do the marking algorithm\n",
-    "    \n",
     "    return marked\n",
     "\n",
     "def is_connected(g,verbose=False):\n",
@@ -117,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b42e1633",
    "metadata": {},
    "outputs": [
@@ -130,13 +153,14 @@
       "***\n",
       "A full binary tree:\n",
       "\tcorrect!\n",
-      "\tcost: 0, budget: 42\n",
+      "\tcost: 19, budget: 42\n",
       "A the graph K5, the complete graph on 5 vertices:\n",
       "\tcorrect!\n",
-      "\tcost: 0, budget: 50\n",
+      "\tcost: 25, budget: 50\n",
       "A the graph C4+C3, the disjoint union of a 4-cycle graph and a 3-cycle graph:\n",
-      "\tincorrect!\n",
-      "Does not pass the basic test!\n"
+      "\tcorrect!\n",
+      "\tcost: 19, budget: 42\n",
+      "passed the basic test!\n"
      ]
     }
    ],
@@ -216,7 +240,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
