--- a/exercises/python-grab-bag.ipynb
+++ b/exercises/python-grab-bag.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7077f534",
    "metadata": {},
    "outputs": [
@@ -55,20 +55,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n",
-      "incorrect!\n",
       "correct!\n",
-      "incorrect!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# Done\n",
     "def n_equal_in_list(li,n):\n",
     "    count = 0\n",
     "    \n",
-    "    # write code here\n",
-    "    \n",
+    "    for elem in li:\n",
+    "        if(elem == n):\n",
+    "            count += 1\n",
     "    return count\n",
     "\n",
     "def test_n_equal_in_list(tests):\n",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "01933978",
    "metadata": {},
    "outputs": [
@@ -108,21 +109,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n",
-      "incorrect!\n",
-      "incorrect!\n",
-      "incorrect!\n",
       "correct!\n",
-      "incorrect!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
    "source": [
+    "# Done\n",
     "def find_second_smallest(li):\n",
     "    smallest = min(li)\n",
-    "    second_smallest = None\n",
-    "    \n",
-    "    # write code here\n",
+    "    li_wo_smallest = [num for num in li if num!=smallest]\n",
+    "    if len(li_wo_smallest) != 0:\n",
+    "        second_smallest = min(li_wo_smallest)\n",
+    "    else:\n",
+    "        second_smallest = None\n",
     "    \n",
     "    return second_smallest\n",
     "\n",
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f1ce901d",
    "metadata": {},
    "outputs": [
@@ -166,27 +170,28 @@
      "text": [
       "(1,1) = 1 correct!\n",
       "(3,1) = 1 correct!\n",
-      "(3,2) = 2 not correct!\n",
+      "(3,2) = 1 correct!\n",
       "(4,2) = 2 correct!\n",
       "(6,3) = 3 correct!\n",
-      "(6,4) = 4 not correct!\n",
-      "(6,5) = 5 not correct!\n",
-      "(7,3) = 3 not correct!\n",
-      "(10,3) = 3 not correct!\n",
-      "(10,4) = 4 not correct!\n",
-      "(153,68) = 68 not correct!\n",
-      "(2037,1455) = 1455 not correct!\n"
+      "(6,4) = 2 correct!\n",
+      "(6,5) = 1 correct!\n",
+      "(7,3) = 1 correct!\n",
+      "(10,3) = 1 correct!\n",
+      "(10,4) = 2 correct!\n",
+      "(153,68) = 17 correct!\n",
+      "(2037,1455) = 291 correct!\n"
      ]
     }
    ],
    "source": [
+    "# Done\n",
     "def gcd(a,b):\n",
     "    assert a>0 and b>0\n",
     "    assert a>=b\n",
-    "    \n",
-    "    # write code here\n",
-    "    \n",
-    "    return b\n",
+    "    if(a%b == 0):\n",
+    "        return b\n",
+    "    else:\n",
+    "        return gcd(b, (a%b))\n",
     "    \n",
     "tests = [(1,1,1),(3,1,1),(3,2,1),(4,2,2),(6,3,3),(6,4,2),(6,5,1),\n",
     "         (7,3,1),(10,3,1),(10,4,2),\n",
@@ -217,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9826b249",
    "metadata": {},
    "outputs": [
@@ -225,16 +230,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n"
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# Done\n",
     "def count_the_vowels(s):\n",
     "    vowels = 0 \n",
-    "    \n",
-    "    # write code here\n",
+    "    vowel_list = ['a','e','i','o','u']\n",
+    "    for char_idx in range(len(s)):\n",
+    "        if s[char_idx] in vowel_list:\n",
+    "            vowels +=1\n",
     "    \n",
     "    return vowels\n",
     "\n",
@@ -264,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "779077af",
    "metadata": {},
    "outputs": [
@@ -272,23 +279,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "incorrect!\n"
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
+    "# Done\n",
     "def list_uniq(l_in):\n",
     "    l_out = []\n",
     " \n",
-    "    # write code here\n",
-    "    \n",
-    "    return l_out    \n",
+    "    for num in l_in:\n",
+    "        if num not in l_out:\n",
+    "            l_out.append(num)\n",
+    "    l_out.sort()\n",
+    "    return l_out   \n",
     "\n",
     "def test_list_uniq():\n",
     "    l_in = [3,2,6,4,1,5,4,4,1,3,5,6,9]\n",
-    "    ans = [1, 2, 4, 3, 5, 6, 9]\n",
+    "    ans = [1, 2, 3, 4, 5, 6, 9]\n",
     "    l_out = list_uniq(l_in)\n",
     "    l_out.sort()\n",
     "    if ans == l_out:\n",
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "52256b4a",
    "metadata": {},
    "outputs": [
@@ -324,21 +332,26 @@
      "output_type": "stream",
      "text": [
       "correct!\n",
-      "not a deep copy!\n",
-      "not a deep copy!\n",
-      "not a deep copy!\n"
+      "correct!\n",
+      "correct!\n",
+      "correct!\n"
      ]
     }
    ],
    "source": [
+    "# Done\n",
     "def deep_list_copy(l):\n",
     "    \n",
     "    list_type = type([])\n",
     "    \n",
     "    def deep_list_copy_x(l):\n",
-    "        l_c = l[:]\n",
-    "        \n",
-    "        # write code here\n",
+    "        l_c = []\n",
+    "        for elem in l:\n",
+    "            if(isinstance(elem,list_type)):\n",
+    "                elem2 =  deep_list_copy_x(elem)\n",
+    "                l_c.append(elem2)\n",
+    "            else:\n",
+    "                l_c.append(elem)\n",
     "        \n",
     "        return l_c\n",
     "    \n",
@@ -405,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "f4d18599",
    "metadata": {},
    "outputs": [
@@ -413,16 +426,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: None\n",
-      "1: None\n",
-      "2: None\n",
-      "3: None\n",
-      "4: None\n",
-      "5: None\n",
-      "6: None\n",
-      "7: None\n",
-      "8: None\n",
-      "9: None\n"
+      "0: 1\n",
+      "1: 2\n",
+      "2: 3\n",
+      "3: 5\n",
+      "4: 8\n",
+      "5: 13\n",
+      "6: 21\n",
+      "7: 34\n",
+      "8: 55\n",
+      "9: 89\n"
      ]
     }
    ],
@@ -430,12 +443,13 @@
     "class Fibonacci:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.a, self.b = None, None\n",
+    "        self.a, self.b = 0,1\n",
     "        \n",
     "    def next(self):\n",
-    "        \n",
-    "        # write code here\n",
-    "        \n",
+    "        temp = self.b\n",
+    "        self.b += self.a\n",
+    "        self.a = temp\n",
+    "\n",
     "        return self.b\n",
     "    \n",
     "def print_some_fibs(n):\n",
@@ -477,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "255f60d8",
    "metadata": {},
    "outputs": [
@@ -485,30 +499,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: []\n",
-      "1: []\n",
-      "2: []\n",
-      "3: []\n",
-      "4: []\n",
-      "5: []\n",
-      "6: []\n",
-      "7: []\n",
-      "8: []\n",
-      "9: []\n"
+      "0: [1]\n",
+      "1: [1, 1]\n",
+      "2: [1, 2, 1]\n",
+      "3: [1, 3, 3, 1]\n",
+      "4: [1, 4, 6, 4, 1]\n",
+      "5: [1, 5, 10, 10, 5, 1]\n",
+      "6: [1, 6, 15, 20, 15, 6, 1]\n",
+      "7: [1, 7, 21, 35, 35, 21, 7, 1]\n",
+      "8: [1, 8, 28, 56, 70, 56, 28, 8, 1]\n",
+      "9: [1, 9, 36, 84, 126, 126, 84, 36, 9, 1]\n"
      ]
     }
    ],
    "source": [
+    "# Done\n",
     "class Pascal:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.row = []\n",
+    "        self.row = [1,0]\n",
     "        \n",
     "    def next(self):\n",
-    "        \n",
-    "        # write code here \n",
-    "        \n",
-    "        return self.row\n",
+    "        new_row = [0]\n",
+    "        for i in range(len(self.row)-1):\n",
+    "            new_row.append(self.row[i]+self.row[i+1])\n",
+    "        new_row.append(0)\n",
+    "        self.row = new_row\n",
+    "        return self.row[1:-1]\n",
     "    \n",
     "def print_some_rows(n):\n",
     "    pascal = Pascal()\n",
@@ -538,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +569,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
