--- a/exercises/classic-sorting-algorithms.ipynb
+++ b/exercises/classic-sorting-algorithms.ipynb
@@ -73,28 +73,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n"
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "# fix my broken code\n",
+    "# Done\n",
     "\n",
     "def selection_sort(a):\n",
     "    \"\"\"\n",
     "    selection sort the list a\n",
     "    \"\"\"\n",
     "    \n",
-    "    # assert LI\n",
-    "    for i in range(len(a)-1):\n",
+    "    # assert LI; trivial case\n",
+    "    for i in range(0,len(a)-1):\n",
+    "        assert a[:i] == sorted(a)[:i] # assert arbitrary LI case; implicitly checks smallest at start\n",
     "        \n",
-    "        # i is where to place the smallest number amount [i:]\n",
-    "        # write code here \n",
+    "        elem = min(a[i:])\n",
+    "        idx = a.index(elem)\n",
+    "        temp = a[i]\n",
+    "        a[i] = elem\n",
+    "        a[idx] = temp\n",
     "\n",
-    "        pass\n",
-    "        # assert LI\n",
     "    \n",
-    "    # assert LI\n",
+    "    assert a == sorted(a) # assert Final LI case\n",
     "    return a\n",
     "\n",
     "def test_selection_sort():\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e3a3b30c",
    "metadata": {},
    "outputs": [
@@ -142,26 +144,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n"
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "# Done\n",
     "def insertion_sort(c):\n",
     "    if len(c)== 0 : return c\n",
-    "    \n",
-    "    # assert LI\n",
-    "    for i in range(len(c)-1):\n",
-    "        for j in range(i,-1,-1):\n",
-    "            \n",
-    "            # write code here\n",
-    "            \n",
-    "            pass\n",
-    "        # assert LI\n",
-    "            \n",
-    "    # assert LI\n",
-    "    return c\n",
+    "    assert_test = c.copy()\n",
+    "\n",
+    "    # assert LI; trivial case\n",
+    "    for i in range(1,len(c)):\n",
+    "        for j in range(i,0,-1):\n",
+    "            if(c[j]< c[j-1]):\n",
+    "                temp = c[j]\n",
+    "                c[j] = c[j-1]\n",
+    "                c[j-1] = temp\n",
+    "        assert sorted(assert_test[:i+1]) == c[:i+1] # Assert LI; arbitrary case\n",
+    "    assert sorted(assert_test) == c # Assert LI; final case\n",
     "\n",
     "def test_insertion_sort():\n",
     "    test = [(13*i)%97 for i in range(84)]\n",
@@ -217,18 +218,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "broken!\n"
+      "correct!\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
+    "# Done\n",
     "def merge_them(cl,ch):\n",
-    "    \n",
-    "    # write code here\n",
-    "    \n",
-    "    return cl+ch\n",
+    "    search = cl+ch\n",
+    "    to_return = []\n",
+    "    while(len(search)>0):\n",
+    "        min_idx = search.index(min(search))\n",
+    "        to_return.append(search.pop(min_idx))\n",
+    "    return to_return\n",
     "\n",
     "def merge_sort(c):\n",
     "    if len(c)<2 : \n",
@@ -260,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +276,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
